--- a/public/schedule.html
+++ b/public/schedule.html
@@ -82,51 +82,80 @@
             <div class="row">
                 <div class="col">
                     <div class="tab-content" id="pills-tabContent">
+                        <!-- 15 Jan -->
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
-                            <div class="row pb-2 ml-auto">
-                                <div class="col-md-2 align-self-center">
+                            <div class="row pb-2">
+                                <div class="col-md align-self-center">
                                     <h6 class="text-muted">13.00 WIB</h6>
                                 </div>
-                                <div class="col-md-10">
+                                <div class="col-md-11">
                                     <div class="card schedule">
                                         <div class="card-body">
-                                            <h5 class="card-title">Day 2 Recap</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Dev Summit</h6>
-                                            <a target="_blank" href="https://www.youtube.com/watch?v=TOY8paDyv74"
-                                                class="card-link">Full Video</a>
+                                            <h5 class="card-title">Keynote 1: What's new on Chrome</h5>
+                                            <img src="http://placehold.it/40x40" class="rounded-circle">
+                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Yohan Totting</h6>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <hr class="my-4 pb-2">
-                            <div class="row pb-2 ml-auto">
-                                <div class="col-md-2 align-self-center">
-                                    <h6 class="text-muted">13.00 WIB</h6>
+                            <div class="row pb-2">
+                                <div class="col-md align-self-center">
+                                    <h6 class="text-muted">13.45 WIB</h6>
                                 </div>
-                                <div class="col-md-10">
+                                <div class="col-md-11">
                                     <div class="card schedule">
                                         <div class="card-body">
-                                            <h5 class="card-title">Day 2 Recap</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Dev Summit</h6>
-                                            <a target="_blank" href="https://www.youtube.com/watch?v=TOY8paDyv74"
-                                                class="card-link">Full Video</a>
+                                            <h5 class="card-title">Keynote 2: Performance and Privacy</h5>
+                                            <img src="http://placehold.it/40x40" class="rounded-circle">
+                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Riza Fahmi</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr class="my-4 pb-2">
+                            <div class="row pb-2">
+                                <div class="col-md align-self-center">
+                                    <h6 class="text-muted">14.25 WIB</h6>
+                                </div>
+                                <div class="col-md-11">
+                                    <div class="card schedule">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Keynote 3: Design and UX</h5>
+                                            <img src="http://placehold.it/40x40" class="rounded-circle">
+                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Jihan A.</h6>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <!-- 23 Jan -->
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-md-6 align-self-center">
-                                            <h3 class="headline-event-tight">Isfa Ganteng</h3>
-                                            <div class="cds-message text-muted">
-                                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium
-                                                non.
-                                            </div>
+                            <div class="row pb-2">
+                                <div class="col-md align-self-center">
+                                    <h6 class="text-muted">13.00 - 15.00 WIB</h6>
+                                </div>
+                                <div class="col-md-10">
+                                    <div class="card schedule">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Workshop 1</h5>
+                                            <img src="http://placehold.it/40x40" class="rounded-circle">
+                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Jefry Dewangga</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row pb-2">
+                                <div class="col-md"></div>
+                                <div class="col-md-10">
+                                    <div class="card schedule">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Workshop 1</h5>
+                                            <img src="http://placehold.it/40x40" class="rounded-circle">
+                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Jefry Dewangga</h6>
                                         </div>
                                     </div>
                                 </div>
@@ -143,7 +172,6 @@
             <div class="row">
                 <div class="col-md-8 align-self-center text-logo text-dark">
                     <img src="https://devfestindonesia.com/_nuxt/img/logo.444364e.png" alt="GDG Indonesia" width="80px">
-                    GDG Indonesia
                 </div>
 
                 <div class="child-menu col-md-2 ml-auto">
