--- a/public/speakers.html
+++ b/public/speakers.html
@@ -69,7 +69,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -78,7 +78,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -87,7 +87,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -96,7 +96,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -105,7 +105,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -114,7 +114,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -123,7 +123,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -132,7 +132,7 @@
                     <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
                         <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
                         <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
@@ -146,7 +146,6 @@
             <div class="row">
                 <div class="col-md-8 align-self-center text-logo text-dark">
                     <img src="https://devfestindonesia.com/_nuxt/img/logo.444364e.png" alt="GDG Indonesia" width="80px">
-                    GDG Indonesia
                 </div>
 
                 <div class="child-menu col-md-2 ml-auto">
