--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="dark-mode.css">
   <link rel="stylesheet" href="style.css">
@@ -30,7 +29,7 @@
         <span class="fa fa-bars"></span>
       </button>
       <div class="collapse navbar-collapse bg-white" id="navbarNavAltMarkup">
-        <div class="navbar-nav d-none d-md-block">
+        <div class="navbar-nav d-none d-xl-block">
           <a target="_blank" class="nav-item btn btn-primary rounded-button" href="https://google.com/"><i
               class="fa fa-share-square"></i> Register Now</a>
         </div>
@@ -62,7 +61,7 @@
             virtual weekend of community-led technical learning and a shared passion for Google technologies on <b>Jan
               15</b>.
           </p>
-          <a class="d-block d-sm-none btn btn-primary rounded-button" href="index.html"><i
+          <a class="d-block d-xl-none btn btn-primary rounded-button" href="index.html"><i
               class="fa fa-share-square"></i> Register Now</a>
         </div>
         <div class="col-md-6 ml-auto order-1">
@@ -78,39 +77,48 @@
     </div>
   </div>
 
-  <section id="hackathon" class="pt-3 pb-5">
+  <section id="hackathon" class="pt-3 pb-5 bg-white">
     <div class="container">
       <div class="row">
         <div class="col-md">
-          <div class="card schedule mb-4">
+          <div class="card schedule cds-content card-background mb-4">
             <div class="card-body">
               <h4><b><span class="chip-chrome">chrome://</span>hackathon</b></h4>
               <br>
-              <p class="cds-message text-muted">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium non.
+              <p class="cds-message text-muted small-paragraph">
+                A mini hackathon that participants can join and challenge themselves to use technology and updates from
+                Chrome Dev Summit 2020 into a project solution where participants can also get a mentoring session and
+                feedback from hackathon mentors.
               </p>
+              <a class="btn btn-warning rounded-button" href="index.html">Read more</a>
             </div>
           </div>
         </div>
         <div class="col-md">
-          <div class="card schedule mb-4">
+          <div class="card schedule cds-content card-background mb-4">
             <div class="card-body">
               <h4><b><span class="chip-chrome">chrome://</span>talks</b></h4>
               <br>
-              <p class="cds-message text-muted">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium non.
+              <p class="cds-message text-muted small-paragraph">
+                A talk session where the amazing speakers will explain the technology and the updates from Chrome Dev
+                Summit 2020, show the demonstration of it and provide some QnA session for participants to get to know
+                the topic much better.
               </p>
+              <a class="btn btn-warning rounded-button" href="index.html">Read more</a>
             </div>
           </div>
         </div>
         <div class="col-md">
-          <div class="card schedule mb-4">
+          <div class="card schedule cds-content card-background mb-4">
             <div class="card-body">
               <h4><b><span class="chip-chrome">chrome://</span>hours</b></h4>
               <br>
-              <p class="cds-message text-muted">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium non.
+              <p class="cds-message text-muted small-paragraph">
+                A simple online workshop where participant will learn the technology in Chrome Dev Summit 2020 are
+                introducing, the platform that we are using are our own Google Codelabs tutorial and glitch for
+                participant to try and deploy their works.
               </p>
+              <a class="btn btn-warning rounded-button" href="index.html">Read more</a>
             </div>
           </div>
         </div>
@@ -134,8 +142,9 @@
               <div class="play-button"></div>
             </div>
             <div class="card-body">
+              <h6 class="card-subtitle mb-2"><small class="text-secondary">Main Topic, Performance and Privacy</small>
+              </h6>
               <h5 class="card-title text-dark">Day 1 Recap</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Main Topic, Performance and Privacy</h6>
               <a target="_blank" href="https://www.youtube.com/watch?v=SYdr7KjrHjo" class="card-link">Full Video</a>
             </div>
           </div>
@@ -146,8 +155,8 @@
               <div class="play-button"></div>
             </div>
             <div class="card-body">
+              <h6 class="card-subtitle mb-2"><small class="text-secondary">Design, UX, and PWA</small></h6>
               <h5 class="card-title text-dark">Day 2 Recap</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Design, UX, and PWA</h6>
               <a target="_blank" href="https://www.youtube.com/watch?v=TOY8paDyv74" class="card-link">Full Video</a>
             </div>
           </div>
@@ -178,9 +187,10 @@
       <div class="row">
         <div class="col-md">
           <ul class="list-inline">
-            <li class="list-inline-item"><a class="text-muted" href="https://developers.google.com/community/gdg">About
+            <li class="list-inline-item"><a class="text-secondary"
+                href="https://developers.google.com/community/gdg">About
                 GDG Program</a></li>
-            <li class="list-inline-item"><a class="text-muted"
+            <li class="list-inline-item"><a class="text-secondary"
                 href="https://developers.google.com/community/gdg/organizers#community-guidelines">Code of Conduct</a>
             </li>
           </ul>
