--- a/public/schedule.html
+++ b/public/schedule.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@400;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Rubik&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dark-mode.css">
@@ -189,10 +189,10 @@
             <div class="row">
                 <div class="col-md">
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a class="text-muted"
+                        <li class="list-inline-item"><a class="text-secondary"
                                 href="https://developers.google.com/community/gdg">About
                                 GDG Program</a></li>
-                        <li class="list-inline-item"><a class="text-muted"
+                        <li class="list-inline-item"><a class="text-secondary"
                                 href="https://developers.google.com/community/gdg/organizers#community-guidelines">Code
                                 of Conduct</a>
                         </li>
