use vue to fetch schedule and speakers

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <div class="col-md-6 my-auto order-2">
           <p class="cds-subtitle badge badge-success">GDG Indonesia</p>
           <h1 class="cds-highlight">chrome://extended</h1>
-          <p class="cds-message text-secondary">Chrome Dev Summit Extended brings together thousands of developers
+          <p class="cds-message text-muted">Chrome Dev Summit Extended brings together thousands of developers
             globally for
             the
             largest
@@ -90,7 +90,6 @@
                 Chrome Dev Summit 2020 into a project solution where participants can also get a mentoring session and
                 feedback from hackathon mentors.
               </p>
-              <a class="btn btn-warning rounded-button" href="index.html">Read more</a>
             </div>
           </div>
         </div>
@@ -104,7 +103,6 @@
                 Summit 2020, show the demonstration of it and provide some QnA session for participants to get to know
                 the topic much better.
               </p>
-              <a class="btn btn-warning rounded-button" href="index.html">Read more</a>
             </div>
           </div>
         </div>
@@ -118,7 +116,6 @@
                 introducing, the platform that we are using are our own Google Codelabs tutorial and glitch for
                 participant to try and deploy their works.
               </p>
-              <a class="btn btn-warning rounded-button" href="index.html">Read more</a>
             </div>
           </div>
         </div>
