--- a/public/schedule.html
+++ b/public/schedule.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dark-mode.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
 
     <title>Chrome Dev Summit Extended 2020 - Chapter Indonesia</title>
 </head>
@@ -63,102 +65,114 @@
     </section>
 
     <section id="content" class="pb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
-                                role="tab" aria-controls="pills-home" aria-selected="true">15 Jan</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
-                                role="tab" aria-controls="pills-profile" aria-selected="false">23 Jan</a>
-                        </li>
-                    </ul>
+        <div id="speakers">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="pills-first-tab" data-toggle="pill" href="#pills-first"
+                                    role="tab" aria-controls="pills-first" aria-selected="true">15 Jan</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="pills-second-tab" data-toggle="pill" href="#pills-second"
+                                    role="tab" aria-controls="pills-second" aria-selected="false">23 Jan</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="pills-third-tab" data-toggle="pill" href="#pills-third"
+                                    role="tab" aria-controls="pills-third" aria-selected="false">30 Jan</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col">
-                    <div class="tab-content" id="pills-tabContent">
-                        <!-- 15 Jan -->
-                        <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
-                            aria-labelledby="pills-home-tab">
-                            <div class="row pb-2">
-                                <div class="col-md align-self-center">
-                                    <h6 class="text-muted">13.00 WIB</h6>
-                                </div>
-                                <div class="col-md-11">
-                                    <div class="card schedule">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Keynote 1: What's new on Chrome</h5>
-                                            <img src="http://placehold.it/40x40" class="rounded-circle">
-                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Yohan Totting</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <hr class="my-4 pb-2">
-                            <div class="row pb-2">
-                                <div class="col-md align-self-center">
-                                    <h6 class="text-muted">13.45 WIB</h6>
-                                </div>
-                                <div class="col-md-11">
-                                    <div class="card schedule">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Keynote 2: Performance and Privacy</h5>
-                                            <img src="http://placehold.it/40x40" class="rounded-circle">
-                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Riza Fahmi</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <hr class="my-4 pb-2">
-                            <div class="row pb-2">
-                                <div class="col-md align-self-center">
-                                    <h6 class="text-muted">14.25 WIB</h6>
-                                </div>
-                                <div class="col-md-11">
-                                    <div class="card schedule">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Keynote 3: Design and UX</h5>
-                                            <img src="http://placehold.it/40x40" class="rounded-circle">
-                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Jihan A.</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                <br>
+                <div class="row">
+                    <div class="col">
+                        <div class="tab-content" id="pills-tabContent">
+                            <!-- 15 Jan -->
+                            <div class="tab-pane fade show active" id="pills-first" role="tabpanel"
+                                aria-labelledby="pills-first-tab">
 
-                        <!-- 23 Jan -->
-                        <div class="tab-pane fade" id="pills-profile" role="tabpanel"
-                            aria-labelledby="pills-profile-tab">
-                            <div class="row pb-2">
-                                <div class="col-md align-self-center">
-                                    <h6 class="text-muted">13.00 - 15.00 WIB</h6>
-                                </div>
-                                <div class="col-md-10">
-                                    <div class="card schedule">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Workshop 1</h5>
-                                            <img src="http://placehold.it/40x40" class="rounded-circle">
-                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Jefry Dewangga</h6>
+                                <h5>{{ firstday.name }}</h5><br>
+
+                                <hr class="my-4 pb-2">
+
+                                <div v-for="speaker in firstday.schedule">
+                                    <div class="row pb-2">
+                                        <div class="col-md align-self-center">
+                                            <h6 class="text-muted">{{ speaker.time }}</h6>
+                                        </div>
+                                        <div class="col-md-11">
+                                            <div class="card schedule">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">{{ speaker.title }}</h5>
+                                                    <img src="http://placehold.it/40x40" class="rounded-circle">
+                                                    <h6 class="card-subtitle mb-2 text-muted speakers-small">{{
+                                                        speaker.speaker }}</h6>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
+                                    <hr class="my-4 pb-2">
                                 </div>
                             </div>
-                            <div class="row pb-2">
-                                <div class="col-md"></div>
-                                <div class="col-md-10">
-                                    <div class="card schedule">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Workshop 1</h5>
-                                            <img src="http://placehold.it/40x40" class="rounded-circle">
-                                            <h6 class="card-subtitle mb-2 text-muted speakers-small">Jefry Dewangga</h6>
+
+                            <!-- 23 Jan -->
+                            <div class="tab-pane fade" id="pills-second" role="tabpanel"
+                                aria-labelledby="pills-second-tab">
+
+                                <h5>{{ secondday.name }}</h5><br>
+
+                                <div v-for="speaker in secondday.schedule">
+                                    <hr class="my-4 pb-2" v-if="speaker.time !== ''">
+                                    <div class="row pb-2">
+                                        <div class="col-md align-self-center">
+                                            <h6 class="text-muted">{{ speaker.time }}</h6>
+                                        </div>
+                                        <div class="col-md-11">
+                                            <div class="card schedule">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">{{ speaker.title }}</h5>
+                                                    <img src="http://placehold.it/40x40" class="rounded-circle">
+                                                    <h6 class="card-subtitle mb-2 text-muted speakers-small">{{
+                                                        speaker.speaker }}</h6>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+
+                                <hr class="my-4 pb-2">
+
+                            </div>
+
+                            <!-- 30 Jan -->
+                            <div class="tab-pane fade" id="pills-third" role="tabpanel"
+                                aria-labelledby="pills-third-tab">
+
+                                <h5>{{ thirdday.name }}</h5><br>
+
+                                <div v-for="speaker in thirdday.schedule">
+                                    <hr class="my-4 pb-2" v-if="speaker.time !== ''">
+                                    <div class="row pb-2">
+                                        <div class="col-md align-self-center">
+                                            <h6 class="text-muted">{{ speaker.time }}</h6>
+                                        </div>
+                                        <div class="col-md-11">
+                                            <div class="card schedule">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">{{ speaker.title }}</h5>
+                                                    <img src="http://placehold.it/40x40" class="rounded-circle">
+                                                    <h6 class="card-subtitle mb-2 text-muted speakers-small">{{
+                                                        speaker.speaker }}</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr class="my-4 pb-2">
+
                             </div>
                         </div>
                     </div>
@@ -167,7 +181,7 @@
         </div>
     </section>
 
-    <footer class="text-lg-start">
+    <footer class=" text-lg-start">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 align-self-center text-logo text-dark">
@@ -178,7 +192,8 @@
                     <ul class="list-unstyled mb-0">
                         <li><a href="#!" class="text-secondary">Schedule</a></li>
                         <li><a href="#!" class="text-secondary">Speakers</a></li>
-                        <li><a href="#!" class="text-secondary">Hackathon Guidelines</a></li>
+                        <li><a href="#!" class="text-secondary">Hackathon Guidelines</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -215,6 +230,30 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="https://coliff.github.io/dark-mode-switch/dark-mode-switch.min.js"></script>
+
+    <script>
+        new Vue({
+            data: {
+                firstday: '',
+                secondday: '',
+                thirdday: '',
+            },
+            el: '#speakers',
+            methods: {
+                fetch: function () {
+                    axios.get(`https://gist.githubusercontent.com/isfaaghyth/236b0615a14b37692a80a480ce201374/raw/e6cf618f7d172177e56d2b2ef7dda6d272c8a5cd/timeline.json`)
+                        .then(response => {
+                            this.firstday = response.data.firstday;
+                            this.secondday = response.data.secondday;
+                            this.thirdday = response.data.thirdday;
+                        })
+                }
+            },
+            beforeMount() {
+                this.fetch()
+            },
+        })
+    </script>
 </body>
 
 </html>
