--- a/public/speakers.html
+++ b/public/speakers.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dark-mode.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
 
     <title>Chrome Dev Summit Extended 2020 - Chapter Indonesia</title>
 </head>
@@ -63,78 +65,21 @@
     </section>
 
     <section id="content" class="pb-5">
-        <div class="container">
-            <div class="card-columns">
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="card schedule mb-4">
-                    <img src="http://placehold.it/64x40" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Software Engineer @ Tokopedia</h6>
-                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
+        <div id="speakers">
+            <div class="container">
+                <div class="card-columns">
+                    <div v-for="speaker in speakers">
+                        <div class="card schedule mb-4">
+                            <img :src="speaker.avatar" class="card-img-top placeholder">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ speaker.name }}</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">{{ speaker.title }}</h6>
+                                <a :href="speaker.linkedin" class="card-link" v-if="speaker.linkedin !== ''"><i
+                                        class="fa fa-linkedin"></i></a>
+                                <a :href="speaker.twitter" class="card-link" v-if="speaker.twitter !== ''"><i
+                                        class="fa fa-twitter"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -189,6 +134,26 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="https://coliff.github.io/dark-mode-switch/dark-mode-switch.min.js"></script>
+
+    <script>
+        new Vue({
+            data: {
+                speakers: '',
+            },
+            el: '#speakers',
+            methods: {
+                fetch: function () {
+                    axios.get(`https://gist.githubusercontent.com/isfaaghyth/236b0615a14b37692a80a480ce201374/raw/e6cf618f7d172177e56d2b2ef7dda6d272c8a5cd/speakers.json`)
+                        .then(response => {
+                            this.speakers = response.data.speakers;
+                        })
+                }
+            },
+            beforeMount() {
+                this.fetch()
+            },
+        })
+    </script>
 </body>
 
 </html>
