--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,19 @@
     </div>
   </section>
 
+  <section id="hackathon">
+    <div class="jumbotron remove-marginbottom jumbotron-fluid">
+      <div class="container">
+        <span class="fa fa-code-fork fa-3x force-white"></span>
+        <br><br>
+        <h1 class="force-white">Hackathon!</h1>
+        <p class="lead force-white">collaborate, create a solution, solve the problems together.</p>
+        <a class="btn btn-warning rounded-button" href="index.html">Register</a>
+        <a class="btn btn-link" href="hackathon.html">Read More</a>
+      </div>
+    </div>
+  </section>
+
   <section id="recap" class="mb-5 bg-light pt-5 pb-5">
     <div class="container">
       <div class="row">
@@ -171,9 +184,9 @@
 
         <div class="child-menu col-md-2 ml-auto">
           <ul class="list-unstyled mb-0">
-            <li><a href="#!" class="text-secondary">Schedule</a></li>
-            <li><a href="#!" class="text-secondary">Speakers</a></li>
-            <li><a href="#!" class="text-secondary">Hackathon Guidelines</a></li>
+            <li><a href="schedule.html" class="text-secondary">Schedule</a></li>
+            <li><a href="speakers.html" class="text-secondary">Speakers</a></li>
+            <li><a href="hackathon.html" class="text-secondary">Hackathon</a></li>
           </ul>
         </div>
 
