--- a/public/schedule.html
+++ b/public/schedule.html
@@ -181,7 +181,7 @@
         </div>
     </section>
 
-    <footer class=" text-lg-start">
+    <footer class="text-lg-start">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 align-self-center text-logo text-dark">
@@ -190,10 +190,9 @@
 
                 <div class="child-menu col-md-2 ml-auto">
                     <ul class="list-unstyled mb-0">
-                        <li><a href="#!" class="text-secondary">Schedule</a></li>
-                        <li><a href="#!" class="text-secondary">Speakers</a></li>
-                        <li><a href="#!" class="text-secondary">Hackathon Guidelines</a>
-                        </li>
+                        <li><a href="schedule.html" class="text-secondary">Schedule</a></li>
+                        <li><a href="speakers.html" class="text-secondary">Speakers</a></li>
+                        <li><a href="hackathon.html" class="text-secondary">Hackathon</a></li>
                     </ul>
                 </div>
 
