--- a/public/schedule.html
+++ b/public/schedule.html
@@ -193,6 +193,7 @@
                         <li><a href="schedule.html" class="text-secondary">Schedule</a></li>
                         <li><a href="speakers.html" class="text-secondary">Speakers</a></li>
                         <li><a href="hackathon.html" class="text-secondary">Hackathon</a></li>
+                        <li><a href="organizers.html" class="text-secondary">Organizers</a></li>
                     </ul>
                 </div>
 
