--- a/public/speakers.html
+++ b/public/speakers.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="card-columns">
                     <div v-for="speaker in speakers">
-                        <div class="card schedule mb-4">
+                        <div class="card schedule">
                             <img :src="speaker.avatar" class="card-img-top placeholder">
                             <div class="card-body">
                                 <h5 class="card-title">{{ speaker.name }}</h5>
@@ -80,11 +80,11 @@
                                         class="fa fa-twitter"></i></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="card schedule mb-4" v-if="!speakers || !speakers.length">
-                        <div class="card-body">
-                            <h5 class="card-title">Loading</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">...</h6>
+                        <div class="card schedule" v-if="!speakers || !speakers.length">
+                            <div class="card-body">
+                                <h5 class="card-title">Loading</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">...</h6>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -104,6 +104,7 @@
                         <li><a href="schedule.html" class="text-secondary">Schedule</a></li>
                         <li><a href="speakers.html" class="text-secondary">Speakers</a></li>
                         <li><a href="hackathon.html" class="text-secondary">Hackathon</a></li>
+                        <li><a href="organizers.html" class="text-secondary">Organizers</a></li>
                     </ul>
                 </div>
 
