--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,7 @@
             <li><a href="schedule.html" class="text-secondary">Schedule</a></li>
             <li><a href="speakers.html" class="text-secondary">Speakers</a></li>
             <li><a href="hackathon.html" class="text-secondary">Hackathon</a></li>
+            <li><a href="organizers.html" class="text-secondary">Organizers</a></li>
           </ul>
         </div>
 
