--- a/public/organizers.html
+++ b/public/organizers.html
@@ -39,7 +39,7 @@
                 <div class="navbar-nav ml-auto">
                     <a class="nav-item nav-link text-secondary" href="index.html">Home</a>
                     <a class="nav-item nav-link text-secondary" href="schedule.html">Schedule</a>
-                    <a class="nav-item nav-link text-secondary" href="speakers.html">Speakers</a>
+                    <a class="nav-item nav-link text-secondary" href="speakers.html">Speakers</span></a>
                 </div>
                 <div class="theme-switch-wrapper">
                     <label class="theme-switch" for="darkSwitch">
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 align-self-center">
-                        <h2 class="text-secondary">Hackathon FAQ</h2>
+                        <h2 class="text-secondary">Organizers</h2>
                     </div>
                 </div>
             </div>
@@ -64,20 +64,26 @@
     </section>
 
     <section id="content" class="pb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div v-for="faq in faq">
-                        <h5>{{ faq.question }}</h5>
-                        <p class="text-muted">{{ faq.answer }}</p>
-                        <br>
+        <div id="organizers">
+            <div class="container">
+                <div class="card-columns">
+                    <div v-for="organizer in organizers">
+                        <div class="card schedule mb-4">
+                            <img :src="organizer.avatar" class="card-img-top placeholder">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ organizer.name }}</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">{{ organizer.role }}</h6>
+                                <a :href="organizer.linkedin" class="card-link" v-if="organizer.linkedin !== ''"><i
+                                        class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class=" text-lg-start">
+    <footer class="text-lg-start">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 align-self-center text-logo text-dark">
@@ -130,14 +136,14 @@
     <script>
         new Vue({
             data: {
-                faq: '',
+                organizers: '',
             },
-            el: '#content',
+            el: '#organizers',
             methods: {
                 fetch: function () {
-                    axios.get(`https://gist.githubusercontent.com/isfaaghyth/236b0615a14b37692a80a480ce201374/raw/ecd40dd785f39dd6b9c6e71eb60a28920a874540/hackathon-faq.json`)
+                    axios.get(`https://gist.githubusercontent.com/isfaaghyth/236b0615a14b37692a80a480ce201374/raw/c6a458621c3ef86d89b1245ae0e472a46986b3ee/organizers.json`)
                         .then(response => {
-                            this.faq = response.data.faq;
+                            this.organizers = response.data.organizers;
                         })
                 }
             },
