remove unused code

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="dark-mode.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/dark-mode.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <title>Chrome Dev Summit Extended 2020 - Chapter Indonesia</title>
 </head>
@@ -223,7 +223,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <script src="https://coliff.github.io/dark-mode-switch/dark-mode-switch.min.js"></script>
-  <script src="youtube.js"></script>
+  <script src="js/youtube.js"></script>
 </body>
 
 </html>
